--- a/css/main.css
+++ b/css/main.css
@@ -151,8 +151,8 @@ nav {
 
 .img_carousel {
   object-fit: cover;
-  height: calc(100vh - 1rem);
-  width: 100%;
+  height: 100%;
+  width: 100vw;
 }
 
 .title_section1 {
