--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -7,8 +7,8 @@
  
  .img_carousel{
   object-fit: cover;
-  height: calc(100vh - 1rem);
-  width: 100%;
+  height: 100%;
+  width: 100vw;
 }
 
 .title_section1 {
