--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,3 +2,5 @@ $VeertienBlue:#00B0B9;
 $VeertienWhite: #F8FAFA;
 $VeertienBlack: #0A0D13;
 $VeertienRed: #df4434;
+$tabPadding: 0.7rem 8px;
+$margin: 0 0.1rem 0.4rem 0;
